# NewProject

./: .gitignore  README.md  docker-compose.yml  schema_local.sql
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.backpu.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a37223c7c72_add_mechanic_and_leave_features.py  0ab0ba5c4b7b_add_vehicle_issue_constraints.py  175d87519af1_add_vehicle_handover_reports.py  331e4aa03b7f_add_username_to_users.py  389a42f58434_add_employee_profiles.py  60922072128d_add_iban_to_employee_profiles.py  73d9afc12ec8_initial_schema.py  756c652910b6_add_password_hash_to_users.py  7ab17c3e520d_add_users_and_vehicle_assignments.py  93b0cc20389f_add_documents_table.py  ab349c5f2a93_add_role_to_users.py  af51138a8446_add_leave_request_constraints.py  b70bf278c474_normalize_vehicle_issue_status_enum_to_.py  baa856256943_add_shift_number_to_users.py  c7293c126e9c_add_db_constraints_for_users_vehicles_.py  ca4e5719bf20_normalize_assignment_status_enum_to_.py  df3f5d6c83a3_add_assigned_mechanic_id_to_vehicle_.py  e2e4e47d4cba_create_vehicles_table.py  e30c9ebe0d89_add_scheduled_datetime_constraint_for_.py  ecaa076ca994_create_vehicles_table.py  ecd1d66fa81a_add_iban_to_employee_profiles.py  f913babab886_add_vehicle_assignment_constraints.py
backend/app/: main.py
backend/app/core/: config.py  constants.py  db_error_map.py  exceptions.py  i18n.py  logging.py  rate_limit.py  security.py
backend/scripts/: bootstrap.sh  create_admin.py
backend/tests/: conftest.py
(+200 files in other folders)
